# flax-addons

./: README.md  pyproject.toml
.github/workflows/: main.yml
flax_addons/preprocessing/: mel_generator.py
flax_addons/utils/: audio.py
tests/: test_audio_utils.py
tests/performance/: test_benchmarks_cpu.py  test_benchmarks_gpu.py
